force-app/main/default/objects/Gate_Pass__c/Gate_Pass__c.object-meta.xml
<CustomObject>
    <label>Gate Pass</label>
    <nameField>
        <label>Gate Pass Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gate Passes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>