force-app/main/default/objects/Gate_Pass__c/fields/Gate_Pass_Status__c.field-meta.xml
<CustomField>
    <fullName>Gate_Pass_Status__c</fullName>
    <label>Gate Pass Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Get_Pass_Status</valueSetName>
    </valueSet>
</CustomField>