force-app/main/default/objects/Gate_Pass__c/fields/Inventory_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Warehouse</label>
    <referenceTo>Inventory_Warehouse__c</referenceTo>
    <relationshipLabel>Gate Passes</relationshipLabel>
    <relationshipName>Gate_Passes</relationshipName>
    <type>Lookup</type>
</CustomField>